// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hint option > analyze('./.env') 1`] = `
{
  "_tag": "dir",
  "back": 0,
  "isPathAbsolute": false,
  "isPathRelative": true,
  "original": "./.env",
  "path": [
    ".env",
  ],
  "pathType": "relative",
}
`;

exports[`hint option > analyze('./.env', { hint: 'file' }) 1`] = `
{
  "_tag": "file",
  "back": 0,
  "file": {
    "extension": null,
    "stem": ".env",
  },
  "isPathAbsolute": false,
  "isPathRelative": true,
  "original": "./.env",
  "path": [],
  "pathType": "relative",
}
`;

exports[`hint option > analyze('./.env.local') 1`] = `
{
  "_tag": "file",
  "back": 0,
  "file": {
    "extension": ".local",
    "stem": ".env",
  },
  "isPathAbsolute": false,
  "isPathRelative": true,
  "original": "./.env.local",
  "path": [],
  "pathType": "relative",
}
`;

exports[`hint option > analyze('./.gitignore') 1`] = `
{
  "_tag": "dir",
  "back": 0,
  "isPathAbsolute": false,
  "isPathRelative": true,
  "original": "./.gitignore",
  "path": [
    ".gitignore",
  ],
  "pathType": "relative",
}
`;

exports[`hint option > analyze('./.gitignore', { hint: 'directory' }) 1`] = `
{
  "_tag": "dir",
  "back": 0,
  "isPathAbsolute": false,
  "isPathRelative": true,
  "original": "./.gitignore",
  "path": [
    ".gitignore",
  ],
  "pathType": "relative",
}
`;

exports[`hint option > analyze('./.gitignore', { hint: 'file' }) 1`] = `
{
  "_tag": "file",
  "back": 0,
  "file": {
    "extension": null,
    "stem": ".gitignore",
  },
  "isPathAbsolute": false,
  "isPathRelative": true,
  "original": "./.gitignore",
  "path": [],
  "pathType": "relative",
}
`;

exports[`hint option > analyze('./config.json') 1`] = `
{
  "_tag": "file",
  "back": 0,
  "file": {
    "extension": ".json",
    "stem": "config",
  },
  "isPathAbsolute": false,
  "isPathRelative": true,
  "original": "./config.json",
  "path": [],
  "pathType": "relative",
}
`;

exports[`hint option > analyze('./config.json', { hint: 'directory' }) 1`] = `
{
  "_tag": "file",
  "back": 0,
  "file": {
    "extension": ".json",
    "stem": "config",
  },
  "isPathAbsolute": false,
  "isPathRelative": true,
  "original": "./config.json",
  "path": [],
  "pathType": "relative",
}
`;

exports[`hint option > analyze('./readme') 1`] = `
{
  "_tag": "dir",
  "back": 0,
  "isPathAbsolute": false,
  "isPathRelative": true,
  "original": "./readme",
  "path": [
    "readme",
  ],
  "pathType": "relative",
}
`;

exports[`hint option > analyze('./readme', { hint: 'file' }) 1`] = `
{
  "_tag": "file",
  "back": 0,
  "file": {
    "extension": null,
    "stem": "readme",
  },
  "isPathAbsolute": false,
  "isPathRelative": true,
  "original": "./readme",
  "path": [],
  "pathType": "relative",
}
`;

exports[`hint option > analyze('./src/') 1`] = `
{
  "_tag": "dir",
  "back": 0,
  "isPathAbsolute": false,
  "isPathRelative": true,
  "original": "./src/",
  "path": [
    "src",
  ],
  "pathType": "relative",
}
`;

exports[`hint option > analyze('./src/', { hint: 'file' }) 1`] = `
{
  "_tag": "dir",
  "back": 0,
  "isPathAbsolute": false,
  "isPathRelative": true,
  "original": "./src/",
  "path": [
    "src",
  ],
  "pathType": "relative",
}
`;

exports[`hint option > analyze('/etc/hosts') 1`] = `
{
  "_tag": "dir",
  "back": 0,
  "isPathAbsolute": true,
  "isPathRelative": false,
  "original": "/etc/hosts",
  "path": [
    "etc",
    "hosts",
  ],
  "pathType": "absolute",
}
`;

exports[`hint option > analyze('/etc/hosts', { hint: 'file' }) 1`] = `
{
  "_tag": "file",
  "back": 0,
  "file": {
    "extension": null,
    "stem": "hosts",
  },
  "isPathAbsolute": true,
  "isPathRelative": false,
  "original": "/etc/hosts",
  "path": [
    "etc",
  ],
  "pathType": "absolute",
}
`;
